--- a/README
+++ b/README
@@ -8,4 +8,6 @@ pathogen:
 
 plugin toevoegen:
 	git submodule add <url van git rep.> bundle/<naam plugin>
+        git submodule init
+        git submodule update
 
