--- a/README
+++ b/README
@@ -24,3 +24,6 @@ tern installeren (javascript completion)
 jsbeautify: 
         cd bundle/jsbeautify
         git submodule update --init --recursive
+
+fuzzyfinder:
+    L9 library (=plugin) must be installed
